added paulvl/larassets dependency. Added custom functions

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.5.9",
-        "laravelcollective/html": "5.2.*"
+        "laravelcollective/html": "5.2.*",
+        "paulvl/larassets": "0.*"
     },
     "autoload": {
         "psr-4": {
